# pimc-toolkit

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/mclst/: CMakeLists.txt  Config.cpp  Config.hpp  IPRawReceiver.hpp  Main.cpp  MclstBase.hpp  MclstBeacon.hpp  OutputHandler.hpp  PacketInfo.hpp  Receiver.hpp  ReceiverBase.hpp  RxStats.hpp  Sender.cpp  Sender.hpp  Timer.hpp
apps/pimc/: CMakeLists.txt  Main.cpp
apps/pimc/config/: Config.cpp  Config.hpp  ConfigUtils.hpp  Formatters.hpp  IPv4JPConfigLoader.cpp  IPv4JPConfigLoader.hpp  IPv4PIMCConfigLoader.cpp  IPv4PIMCConfigLoader.hpp  IPv4PIMSMConfigLoader.cpp  IPv4PIMSMConfigLoader.hpp  JPConfig.hpp  JPConfigLoader.cpp  JPConfigLoader.hpp  LoggingConfig.hpp  LoggingConfigLoader.hpp  MulticastConfigLoader.hpp  PIMCConfig.hpp  PIMCConfigLoader.cpp  PIMCConfigLoader.hpp  PIMSMConfig.hpp  PIMSMConfigLoader.cpp  PIMSMConfigLoader.hpp  PIMSMParams.hpp
apps/pimc/logging/: ConsoleLogger.cpp  ConsoleLogger.hpp  FileLogger.cpp  FileLogger.hpp  LevelFormatter.hpp  Logging.cpp  Logging.hpp
apps/pimc/net/: BindToDevice.cpp  BindToDevice.hpp  BindToDeviceLinux.icc  BindToDeviceMacos.icc  IPv4PIMIntf.cpp  IPv4PIMIntf.hpp  IPv4RawSocket.cpp  IPv4RawSocket.hpp
apps/pimc/packets/: IPv4PIMHello.cpp  IPv4PIMHello.hpp  IPv4PIMHelloPacket.cpp  IPv4PIMHelloPacket.hpp  IPv4PIMUpdatePacket.cpp  IPv4PIMUpdatePacket.hpp
apps/pimc/pimsm/: GenerationID.hpp  InversePack.hpp  InversePackSanityCheck.hpp  PIMSMParams.hpp  Pack.hpp  PackSanityCheck.hpp  SanityCheckUtils.hpp  UBCursor.hpp  Update.hpp  UpdateBuilder.hpp  UpdateFormatter.hpp  UpdatesSanityCheck.hpp
apps/pimc/scheduler/: EventQueue.hpp  HelloEvent.hpp  IPv4Exec.cpp  IPv4Exec.hpp  IPv4GoodbyeEvent.hpp  IPv4GoodbyeJPUpdateEvent.hpp  IPv4HelloEvent.hpp  IPv4JPUpdateEvent.hpp  Timer.hpp
apps/pimc/tests/: IPv4PackingVerifierConfigLoader.cpp  IPv4PackingVerifierConfigLoader.hpp  InverseUpdateLoader.hpp  JPConfigUpdateCompare.hpp  PackingTests.cpp  PackingVerifierConfig.hpp  PackingVerifierConfigLoader.hpp  UpdateCompare.hpp  UpdateLoader.hpp  packing-tests.cmake  packing-tests.yml
apps/pimc/tests/test-gen/: gen_config1.py  requirements.txt  ver_config1.py
apps/pimc/tests/test-gen/notebook_utils/: test_suite.py
apps/pimc/tests/test-gen/notebooks/: TestSuite_T001_1g1u.ipynb  TestSuite_T002_3g1u.ipynb  TestSuite_T003_1g3u.ipynb  TestSuite_T004_2g3u.ipynb  TestSuite_T005_2g3u.ipynb  TestSuite_T006_4g6u.ipynb  TestSuite_T007_10g10u.ipynb  TestSuite_T008_15g12u.ipynb  pimc-pimsm-pack-basic.ipynb
apps/pimc/tests/test-gen/pimc_testgen/cisco_ios/: __init__.py  parse_show_ip_mroute.py
apps/pimc/tests/test-gen/pimc_testgen/notebook_utils/: jupyter.py  show.py  test_suite.py
apps/pimc/tests/test-gen/pimc_testgen/pimsm/: IPv4Address.py  __init__.py  config_utils.py  group.py  group_summary.py  info.py  inverse_group.py  inverse_pack.py  (+1 more)
apps/pimc/tests/test-gen/pimsm/: Group.py  Update.py  __init__.py  config_utils.py  info.py  inverse_group.py  inverse_update.py  pack.py  update.py  utils.py
lib/: CMakeLists.txt  version.cpp  version_internal.hpp.in
lib/core/: Called.hpp  CompilerUtils.hpp  Optional.hpp  OptionalResultHelpers.hpp  Result.hpp  TypeUtils.hpp
lib/core/tests/: Deferred-Tests.cpp  Failure-Tests.cpp  Optional-Tests.cpp  Result-AdHoc-Tests.cpp  Result-Tests.cpp  ResultConstexpr-Tests.cpp  TypeUtils-Tests.cpp
lib/dissect/: PacketView.hpp
lib/formatters/: IPFormatters.hpp  IPv4Formatters.hpp  IPv4Ostream.hpp  NanosText.hpp  SysErrorFormatter.hpp  SysErrorOstream.hpp  detect_strerror_r.hpp
lib/formatters/tests/: IPv4Output-Tests.cpp
lib/net/: IPAddress.hpp  IPv4Address.hpp  IPv4HdrView.hpp  IPv4IntfTable.cpp  IPv4IntfTable.hpp  IPv4PktInfo.hpp  IPv4Prefix.hpp  PIMProto.hpp  UDPHdrView.hpp  dns-utils.cpp  dns-utils.hpp
lib/net/tests/: IPv4Net-tests.cpp
lib/packets/: IPv4HdrView.hpp  PIMSMv2.hpp  PIMSMv2Utils.hpp
lib/parsers/: IPParsers.hpp  IPv4Parsers.hpp  NumberParsers.hpp
lib/parsers/tests/: IPv4InteractiveTest-Main.cpp  IPv4Parser-tests.cpp  NumberParsers-Tests.cpp
lib/pimc/core/: Deferred.hpp  Endian.hpp  Meta.hpp  Optional.hpp  OptionalResultHelpers.hpp  TupleUtils.hpp
lib/pimc/core/tests/: Optional-Result-TestUtils.hpp
lib/pimc/events/: FixedEventQueue.hpp
lib/pimc/formatters/: ConsumeIfUnlessEscaped.hpp  FailureFormatter.hpp  Fmt.hpp  FmtChrono.hpp  HexAsciiBlock.hpp  IPv4Formatters.hpp  IPv4Ostream.hpp  IndentBlock.hpp  IntfTableFormatter.hpp  LoggingLevelFormatter.hpp  MemoryBuffer.hpp  SysErrorOstream.hpp  detect_strerror_r.hpp
lib/pimc/formatters/tests/: ConsumeIfUnlessEscaped-tests.cpp  NanosText-tests.cpp
lib/pimc/logging/: LoggingLevel.hpp
lib/pimc/net/: IP.hpp  IPv4Address.hpp  IPv4IntfTable.cpp  IPv4IntfTable.hpp  IPv4PktInfo.hpp  IPv4Prefix.hpp  IntfTable.cpp  IntfTable.hpp  SocketUtils.cpp  SocketUtils.hpp
lib/pimc/net/tests/: IPv4Net-tests.cpp
lib/pimc/packets/: IPChecksum.cpp  IPChecksum.hpp  IPv4HdrView.hpp  IPv4HdrWriter.hpp  PIMSMv2.hpp  PIMSMv2Utils.hpp  PacketWriter.hpp
lib/pimc/parsers/: IPParsers.hpp  NumberParsers.hpp
lib/pimc/parsers/tests/: IPv4Parser-tests.cpp
lib/pimc/system/: Exceptions.hpp
lib/pimc/text/: Location.hpp  MemoryBuffer.hpp  Plural.hpp  StringUtils.hpp
lib/pimc/time/: TimeUtils.hpp  Timestamp.hpp
lib/pimc/unix/: CapNetRaw.hpp  CapState.hpp  GetOptLong.cpp  GetOptLong.hpp  TerminalColors.hpp
lib/pimc/yaml/: BuilderBase.hpp  ErrorHandler.hpp  LoadAll.cpp  LoadAll.hpp  Structured.cpp  Structured.hpp
lib/system/: Exceptions.hpp  SysError.cpp  SysError.hpp
lib/text/: CString.hpp  ConsumeIfUnlessEscaped.hpp  HexAsciiBlock.hpp  IndentBlock.hpp  MemoryBuffer.hpp  NanosText.hpp  NumberLengths.hpp  SCLine.hpp
lib/text/tests/: ConsumeIfUnlessEscaped-tests.cpp  NanosText-tests.cpp
lib/unix/: GetOptLong.cpp  GetOptLong.hpp  SignalHandler.hpp
lib/yaml/: BuilderBase.hpp  LoadAll.cpp  LoadAll.hpp  Structured.cpp  Structured.hpp  StructuredYaml.cpp  StructuredYaml.hpp  StructuredYamlErrorHandler.hpp  YamlLoadAll.cpp  YamlLoadAll.hpp
version/: CMakeLists.txt  version.cpp  version.hpp
(+58 files in other folders)
